new proj/src/objects/GE_HQ_IB_Mod_Request__c.object
<CustomObject>
    <description>Installed Base Modification Request is for GIB modification process for Installed Base Object</description>
    <fields>
        <fullName>GE_HQ_Installed_Base__c</fullName>
        <label>Installed Base</label>
        <referenceTo>GE_Installed_Base__c</referenceTo>
        <relationshipName>Asset_Modification_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Sales_Chnl__c</fullName>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Services Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Services Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Structured Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Wind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sales_Chnl_parent__c</fullName>
        <formula>TEXT(GE_HQ_Installed_Base__r.GE_ES_Sales_Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IB-Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sales_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Asset_Modification_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sales_Mgr_parent__c</fullName>
        <formula>GE_HQ_Installed_Base__r.GE_ES_Account_Manager__r.FirstName +&apos; &apos;+ GE_HQ_Installed_Base__r.GE_ES_Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IB-Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sales_Reg__c</fullName>
        <inlineHelpText>New Sales Region</inlineHelpText>
        <label>Sales Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sales_Rgn_Parent__c</fullName>
        <formula>GE_HQ_Installed_Base__r.GE_ES_Sales_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IB-Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Installed Base Modification Request</label>
    <nameField>
        <displayFormat>IMR-{DD}/{MM}/{YYYY}-{00000}</displayFormat>
        <label>Installed Base Modification Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Base Modification Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>